// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Datetime reducer Should return the default state to meta map 1`] = `
Object {
  "allDay": "_EventAllDay",
  "dateTimeSeparator": "_EventDateTimeSeparator",
  "end": "_EventEndDate",
  "start": "_EventStartDate",
  "timeRangeSeparator": "_EventTimeRangeSeparator",
  "timeZone": "_EventTimezone",
}
`;

exports[`[STORE] - Datetime reducer Should set the all day 1`] = `
Object {
  "allDay": true,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the all day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the default state 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the editability 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the editability 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": false,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "June 25, 2018 4:00 pm",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end time input 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "18:00",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the initial state 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "at",
  "end": "2018-04-01 12:15:00",
  "endTimeInput": "12:15 pm",
  "isEditable": true,
  "multiDay": true,
  "naturalLanguageLabel": "April 1 2020 at 9:30 am - April 1 2018 at 12:15 pm",
  "showTimeZone": false,
  "start": "2020-04-01 09:30:00",
  "startTimeInput": "9:30 am",
  "timeRangeSeparator": "to",
  "timeZone": "UTC+8",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": true,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the natural language label 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "2 weeks from now",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator date 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": " > ",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": " | ",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "June 5, 2018 5:00 pm",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start time input 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "18:00",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the visibility of the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": true,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the visibility of the timezone 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 17:00:00",
  "endTimeInput": "5:00 pm",
  "isEditable": true,
  "multiDay": false,
  "naturalLanguageLabel": "July 19 2018 at 8:00 am - 5:00 pm",
  "showTimeZone": false,
  "start": "2018-07-19 08:00:00",
  "startTimeInput": "8:00 am",
  "timeRangeSeparator": "-",
  "timeZone": "UTC",
}
`;
